* In Reader
  * URI canonicalization and validation.
  * Added :canonicalize, and :intern options.
  * Change :strict option to :validate.
  * Don't create unnecessary namespaces.
  * Don't use regexp to substitute base URI in URI serialization.
  * Collect prefixes when extracting mappings.
* Literal::XML
  * Add all in-scope namespaces, not just those that seem to be used.

=== 0.2.3
* Fixed QName generation in Writer based on RDF/XML Processing recommendations

=== 0.2.2.1
* Ruby 1.9.2 support.
* Added script/tc to run test cases
* Mark failing XMLLiteral tests as pending

=== 0.2.2
* Fix bug creating datatyped literal where datatype is a string, not an RDF::URI
* Added more XMLLiteral tests (fail, until full canonicalization working)
* Added RDF_Reader and RDF_Writer behavior expectations
* Use RDF::Writer#prefix and #prefixes implementation instead of internal version.
* Added RDF::Reader#rewind and #close, which override default behavior as stream is closed on initialization and rewinding isn't required.
* In console, load RDF.rb from parent directory, if it exists.
* Dependencies on RDF 0.2.2
* Replace String#rdf_escape with RDF::NTriples.escape
* Fixed bug in Writer where a qname was expected for sorting, but property has no qname
* Handle XMLLiteral when value is a Nokogiri node set.
* Ensure URIs are properly RDF Escaped (patch to RDF::NTriples::Writer#format_uri)

=== 0.2.1
* Update for RDF 0.2.1
* Writer bug fixes:
  * RDF::Node#identifier => RDF::Node#id
  * Vocabulary.new(uri) => Vocabulary(uri)

=== 0.2.0
* Updates for RDF 0.2.0
  * Use URI#intern instead of URI#new
  * Change use of Graph#predicates and Graph#objects to use as enumerables

=== 0.0.3
* Added patches for the following:
  * RDF::Graph#properties
  * RDF::Graph#seq (Output rdf:Seq elements in order)
  * RDF::Graph#type_of
  * RDF::Literal.xmlliteral (Create literal and normalize XML)
  * RDF::Literal#xmlliteral?
  * RDF::Literal#anonymous? (missing from library)