@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new("> 1.3.1") if s.respond_to? :required_rubygems_version=
   s.authors = ["Gregg Kellogg"]
-  s.date = %q{2010-11-18}
+  s.date = %q{2010-12-23}
   s.description = %q{RDF::RDFXML is an RDF/XML reader and writer for Ruby using the RDF.rb library suite.}
   s.email = %q{gregg@kellogg-assoc.com}
   s.extra_rdoc_files = [
@@ -437,14 +437,14 @@ Gem::Specification.new do |s|
     if Gem::Version.new(Gem::VERSION) >= Gem::Version.new('1.2.0') then
       s.add_runtime_dependency(%q<rdf>, ["= 0.3.0.pre"])
       s.add_runtime_dependency(%q<nokogiri>, [">= 1.3.3"])
-      s.add_development_dependency(%q<rspec>, ["= 1.3.0"])
+      s.add_development_dependency(%q<rspec>, [">= 2.1.0"])
       s.add_development_dependency(%q<rdf-spec>, [">= 0"])
       s.add_development_dependency(%q<rdf-isomorphic>, [">= 0"])
       s.add_development_dependency(%q<yard>, [">= 0"])
     else
       s.add_dependency(%q<rdf>, ["= 0.3.0.pre"])
       s.add_dependency(%q<nokogiri>, [">= 1.3.3"])
-      s.add_dependency(%q<rspec>, ["= 1.3.0"])
+      s.add_dependency(%q<rspec>, [">= 2.1.0"])
       s.add_dependency(%q<rdf-spec>, [">= 0"])
       s.add_dependency(%q<rdf-isomorphic>, [">= 0"])
       s.add_dependency(%q<yard>, [">= 0"])
@@ -452,7 +452,7 @@ Gem::Specification.new do |s|
   else
     s.add_dependency(%q<rdf>, ["= 0.3.0.pre"])
     s.add_dependency(%q<nokogiri>, [">= 1.3.3"])
-    s.add_dependency(%q<rspec>, ["= 1.3.0"])
+    s.add_dependency(%q<rspec>, [">= 2.1.0"])
     s.add_dependency(%q<rdf-spec>, [">= 0"])
     s.add_dependency(%q<rdf-isomorphic>, [">= 0"])
     s.add_dependency(%q<yard>, [">= 0"])
