@@ -14,6 +14,7 @@
   * Collect prefixes when extracting mappings.
 * Literal::XML
   * Add all in-scope namespaces, not just those that seem to be used.
+* RSpec 2 compatibility
 
 === 0.2.3
 * Fixed QName generation in Writer based on RDF/XML Processing recommendations
